--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "daisyui": "^4.12.14",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
