--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lightgallery": "^2.8.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-date-picker": "^11.0.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.15"
