--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "lg-zoom": "^1.3.0",
     "lightgallery": "^2.8.2",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "swiper": "^11.1.15"
   },
