--- a/package.json
+++ b/package.json
@@ -11,19 +11,23 @@
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.15.0",
     "lg-thumbnail": "^1.2.1",
     "lg-zoom": "^1.3.0",
     "lightgallery": "^2.8.2",
     "next": "15.0.3",
     "react": "^18.3.1",
-    "react-datepicker": "^7.5.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-tailwindcss-datepicker": "^1.7.2",
     "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.14",
     "eslint": "^8",
