login add final

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.4",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
+    "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lg-thumbnail": "^1.2.1",
