--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-tailwindcss-datepicker": "^1.7.2",
     "swiper": "^11.1.15"
   },
