--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-date-range": "^1.4.9",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18",
     "daisyui": "^4.12.14",
     "eslint": "^8",
